2003-07-20  James Tabor	<jimtabor@adsl-64-217-116-74.dsl.hstntx.swbell.net>

	* lib/gdi32/misc/stubs.c Implemented Unpluged DC code.
	* lib/gdi32/objects/dc.c ditto
	* lib/gdi32/objects/region.c ditto
	* lib/user32/windows/draw.c Implemented FrameRect, InvertRect and
	DrawFocusRect.

2003-07-18  Royce Mitchell III  <royce3@ev1.net>

	* drivers/fs/vfat/volume.c: fixed bug lines 88, 92 - wasn't copying
	null-terminator.

2003-07-18  Royce Mitchell III  <royce3@ev1.net>

	* include/defines.h: added missing DISP_CHANGE_BADPARAM
	* include/ntos/gditypes.h: fixed DEVMODEA/W structures
	(had to move POINTL structure from structs.h)
	* include/win32k/ntuser.h: fixed some parameter lists
	* subsys/win32k/ntuser/stubs.c: ditto
	* lib/user32/misc/devmode.c: new function USER32_DevModeA2W
	converts DEVMODEA structure to a DEVMODEW
	* lib/user32/include/user32.h: declaration for USER32_DevModeA2W
	* lib/user32/makefile: added misc/devmode.c
	* lib/user32/misc/desktop.c: converting CreateDesktopA's
	DEVMODEA to a DEVMODEW now.
	* lib/user32/misc/display.c: implemented all functions except
	GetMonitorInfoA/W

2003-07-17  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	* drivers/fs/ntfs/notes.txt: New file.
	* drivers/fs/ntfs/close.c: Ditto.
	* drivers/fs/ntfs/rw.c: Ditto.
	* drivers/fs/ntfs/attrib.c: Change Cdfs prefix to Ntfs.
	* drivers/fs/ntfs/fcb.c: Ditto.
	* drivers/fs/ntfs/finfo.c: Ditto.
	* drivers/fs/ntfs/fsctl.c: Ditto.
	* drivers/fs/ntfs/volinfo.c: Ditto.
	* drivers/fs/ntfs/ntfs.c (DriverEntry): Set remaining dispatch functions.
	* drivers/fs/ntfs/ntfs.h: Change Cdfs prefix to Ntfs.
	(NTFS_RECORD_HEADER, FILE_RECORD_HEADER): Document fields.
	* drivers/fs/ntfs/makefile (TARGET_OBJECTS): Add close.o rw.o.

2003-07-17  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	* INSTALL: Update installation instructions.

2003-07-16  Royce Mitchell III <royce3@ev1.net>

	* modifed strtok & wcstok in msvcrt so that crtdll can use it.