@@ -1,5 +1,13 @@
 2003-07-20  James Tabor	<jimtabor@adsl-64-217-116-74.dsl.hstntx.swbell.net>
 
+	* include/win32k/ntuser.h Implemented GetKeyState, GetKeyboardState &
+	SetKeyboardState.
+	* subsys/win32k/ntuser/stubs.c
+	* subsys/win32k/ntuser/keyboard.c
+	* lib/user32/windows/input.c
+
+2003-07-20  James Tabor	<jimtabor@adsl-64-217-116-74.dsl.hstntx.swbell.net>
+
 	* lib/gdi32/misc/stubs.c Implemented Unpluged DC code.
 	* lib/gdi32/objects/dc.c ditto
 	* lib/gdi32/objects/region.c ditto
